--- a/myproject/templates/blog/blog_page.html
+++ b/myproject/templates/blog/blog_page.html
@@ -37,8 +37,8 @@
 
         <div class="navigators-main">
             <div class="navigators">
-                <div class="previous"><a href="{{ page.prev_portrait }}"><b>< Prev</b>  </a></div>
-                <div class="next"><a href="{{ page.next_portrait }}"><b>Next > </b></a></div>
+                <div class="previous"><a href="{{ page.prev_portrait }}">< Prev</a></div>
+                <div class="next"><a href="{{ page.next_portrait }}">Next ></a></div>
             </div>
         </div>
 
