--- a/myproject/templates/work/work_details_page.html
+++ b/myproject/templates/work/work_details_page.html
@@ -17,7 +17,7 @@
         <!-- <p class="goback"><a href="{{ page.get_parent.url }}"> < < GO BACK</a></p> -->
         <div class="breads">
             <ul class="breadcrumb">
-                <li><a href="{{ page.get_parent.url }}">Work</a></li>
+                <li><a href="{{ page.get_parent.url }}">work</a></li>
                 <li class="selected">{{ page.work_title }}</li>
               </ul>
         </div> 
