--- a/myproject/templates/work/work_index_page.html
+++ b/myproject/templates/work/work_index_page.html
@@ -27,8 +27,8 @@
                                     </div>
                                 
                                 <div class="work-contents">
-                                    <div class="work-title"><a href="{% pageurl post %}"><p>{{ post.work_title }}</p></a></div>
-                                    <div class="work-subtitle"><a href="{% pageurl post %}"><p>{{ post.work_subtitle }}</p></a></div>
+                                    <div class="work-title"><a href="{% pageurl post %}">{{ post.work_title }}</a></div>
+                                    <div class="work-subtitle"><a href="{% pageurl post %}">{{ post.work_subtitle }}</a></div>
                                 </div>
                              
                                 {% endif %}
