--- a/myproject/static/css/work/work_index_page.css
+++ b/myproject/static/css/work/work_index_page.css
@@ -63,7 +63,7 @@
     width: 70%;
 }
 
-.work-title p{
+.work-title {
     font-size: 20px;
     font-weight: 900;
     margin-bottom: 10px;
@@ -77,7 +77,7 @@
 }
 
 .work-card:hover .grid-image {
-    opacity: 0.35;
+    opacity: 0.2;
 }
   
 .work-card:hover .work-contents {
@@ -179,6 +179,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        
     }
 
     .image-sub-container{
@@ -188,16 +189,18 @@
         filter: brightness(0.4);
     }
     
-    .work-title{
-        font-size: 10px;
+    .work-title a{
+        font-size: 15px;
         font-weight: 700;
         color: white;
+        padding: 10px auto;
     }
 
-    .work-subtitle{
-        font-size: 9px;
-        font-weight: 700;
+    .work-subtitle a {
+        font-size: 10px;
+        font-weight: 600;
         color: white;
+        padding: 10px auto;
     }
 
     a{
